# injective-core

./: .coderabbit.yaml  .dockerignore  .gitignore  .golangci.yml  CHANGELOG.md  Dockerfile  Dockerfile.nonroot  Dockerfile.release  LICENSE  Makefile  README.md  codecov.yml  go.mod  go.sum  injectived-cli.sh  injectived.protoset  injectived.sh  restart.sh  setup.sh
.chglog/: config.yml
cli/: README.md  parsers.go  query.go  root.go  tx.go
cli/flags/: flags.go
client/: package.json.template
client/docs/: config.json
client/proto-ts/: package-lock.json  package.json  package.json.esm.template
cmd/injectived/: cmd_devnetify.go  cmd_indexer.go  devnet.go  flags.go  genaccounts.go  (+5 more)
docs/: .env.example  .gitignore  DOCS_README.md  README.md  docusaurus.config.js  package-lock.json  package.json  post.sh  pre.sh
injective-chain/modules/permissions/wasm-hook-example/: Cargo.toml  README.md
injective-chain/modules/permissions/wasm-hook-example/artifacts/: checksums.txt  checksums_intermediate.txt  wasm_hook_example-aarch64.wasm
injective-chain/modules/permissions/wasm-hook-example/src/: contract.rs  lib.rs  msg.rs
interchaintest/: README.md  go.mod  go.sum  setup.go
logging/: logging.go
peggo/: .env.example
scripts/: align_deps.go  basic-upgrade-test.sh  coverage-diff-html.sh  coverage-html.sh  gen-injectived-grpc-ts.sh  instantiate-cw20.sh  peggo_wrappers.sh  precompiles-bindings.sh  proto-tools-installer.sh  protoc-gen-ts.sh  protoc-swagger-gen.sh  protocgen-pulsar.sh  protocgen.sh  ts-ignore-injective-grpc-ts.sh  update_sdk_go.sh
version/: version.go
(+1968 files in other folders)
