[package]
authors = ["Injective Labs Inc."]
description             = "A CosmWasm hook example for permissions module"
name                    = "wasm-hook-example"
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[lib]
crate-type = [ "cdylib", "rlib" ]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = [ "cosmwasm-std/backtraces" ]
# use library feature to disable all instantiate/execute/query exports
integration = [  ]
library     = [  ]

[dependencies]
cosmwasm-schema     = { version = "1.2.0" }
cosmwasm-std        = { version = "1.2.0", features = [ "abort", "iterator" ] }
cw-storage-plus     = { version = "0.15.1" }
cw2                 = { version = "0.15.1" }
thiserror           = { version = "1.0.30" }
injective-cosmwasm  = { version = "0.2.13" }
serde               = { version = "1.0.136", default-features = false, features = [ "derive" ] }
serde-json-wasm     = "0.4.1"